fix: card title overflow

--- a/src/Styles/modules/_card.scss
+++ b/src/Styles/modules/_card.scss
@@ -36,7 +36,7 @@
         font-weight: 700;
         font-size: 18px;
 
-        max-width: calc($card-size - 35px);
+        max-width: calc($card-size - 55px);
 
         color: white;
         background-color: rgba($color: #000000, $alpha: .5);
